k8s/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: node-app
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
